--- a/Client/package.json
+++ b/Client/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "immutability-helper": "^3.0.0",
+    "lodash.flow": "^3.5.0",
     "react": "^16.8.6",
+    "react-dnd": "^7.4.3",
+    "react-dnd-html5-backend": "^7.4.0",
     "react-dom": "^16.8.6",
     "react-player": "^1.10.0",
     "react-redux": "^6.0.1",
