--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "socket.io": "^2.2.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.2.0",
+    "uuid": "^3.3.2"
   }
 }
