--- a/Client/package.json
+++ b/Client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "immutability-helper": "^3.0.0",
     "lodash.flow": "^3.5.0",
@@ -18,6 +19,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
