--- a/Client/package.json
+++ b/Client/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
