fixed data base issue and added icons

--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
     "react-dnd": "^7.4.3",
     "react-dnd-html5-backend": "^7.4.0",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.5.0",
     "react-player": "^1.10.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
