--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.9.0",
+    "react-icons": "^3.5.0",
     "screenfull": "^4.2.0",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
